--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,58 @@
 version: '3.8'
 
 services:
-  erpnext:
-    build: .
-    ports:
-      - "8000:8000"
-    environment:
-      - DB_HOST=mariadb
-      - DB_PORT=3306
-      - DB_USER=root
-      - DB_PASSWORD=123456
-      - SITE_NAME=erp.localhost
-      - ADMIN_PASSWORD=admin123
-      - INSTALL_APPS=erpnext
-    depends_on:
-      - mariadb
+  backend:
+    image: frappe/erpnext:version-14
+    deploy:
+      restart_policy:
+        condition: on-failure
     volumes:
-      - frappe_data:/home/frappe/bench
+      - sites:/home/frappe/frappe-bench/sites
+      - logs:/home/frappe/frappe-bench/logs
+    environment:
+      - DB_HOST=db
+      - REDIS_CACHE=redis-cache:6379
+      - REDIS_QUEUE=redis-queue:6379
 
-  mariadb:
+  db:
     image: mariadb:10.6
     environment:
-      - MYSQL_ROOT_PASSWORD=123456
+      MYSQL_ROOT_PASSWORD: admin
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - db-data:/var/lib/mysql
 
-  redis:
-    image: redis:6.2-alpine
+  frontend:
+    image: frappe/erpnext:version-14
+    depends_on:
+      - backend
+    deploy:
+      restart_policy:
+        condition: on-failure
+    command:
+      - nginx-entrypoint.sh
+    environment:
+      BACKEND: backend:8000
+      FRAPPE_SITE_NAME_HEADER: frontend
+      UPSTREAM_REAL_IP_ADDRESS: 127.0.0.1
     volumes:
-      - redis_data:/data
+      - sites:/home/frappe/frappe-bench/sites
+      - logs:/home/frappe/frappe-bench/logs
+    ports:
+      - "8000:8000"
+
+  redis-cache:
+    image: redis:6.2-alpine
+    deploy:
+      restart_policy:
+        condition: on-failure
+
+  redis-queue:
+    image: redis:6.2-alpine
+    deploy:
+      restart_policy:
+        condition: on-failure
 
 volumes:
-  mariadb_data:
-  redis_data:
-  frappe_data:
+  db-data:
+  sites:
+  logs:
